# git-prune-merged

./: .gitignore  README.md  pyproject.toml
src/git_prune_merged/: __init__.py  __main__.py  cli.py
