[project]
name = "git-prune-merged"
version = "0.1.0"
description = "Prune deleted remote branches, then delete only the local branches that were merged (including squash-merged) to main."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
# Installs as `git-prune-merged`, which also makes `git prune-merged` work
# (git resolves `git-*` executables on PATH as subcommands).
git-prune-merged = "git_prune_merged.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_prune_merged"]
