[project]
name = "git-prune-merged"
description = "Prune deleted remote branches, then delete only the local branches that were merged (including squash-merged) to main."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["rich>=13"]
dynamic = ["version"]

[project.scripts]
# Installs as `git-prune-merged`, which also makes `git prune-merged` work
# (git resolves `git-*` executables on PATH as subcommands).
git-prune-merged = "git_prune_merged.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version comes from git tags (e.g. `v0.2.0`) via hatch-vcs — no manual bumps.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/git_prune_merged/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/git_prune_merged"]
